[#237] - Gestionar token de firebase
